--- a/angular/logging-service/src/app/app.component.html
+++ b/angular/logging-service/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>AppComponent</h1>
+  <h1>{{ title }}</h1>
   <hr />
   <div class="wrapper" style="border: none">
     <app-one></app-one>
