user input, update method and service

--- a/angular/logging-service/src/app/one/one.component.html
+++ b/angular/logging-service/src/app/one/one.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" style="flex-direction: column">
-  <p>Add 1 click</p>
-  <button (click)="onClick()">Log</button>
+<div class="wrapper box" style="flex-direction: column">
+  <input type="text" placeholder="Write a title" #titleInput />
+  <button (click)="onAddBook()">Add Title</button>
 </div>
