--- a/angular/logging-service/src/app/two/two.component.html
+++ b/angular/logging-service/src/app/two/two.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" style="flex-direction: column">
+<div class="wrapper box" style="flex-direction: column">
   <p>Add 2 clicks</p>
   <button (click)="onClick()">Log</button>
 </div>
