--- a/angular/logging-service/src/styles.css
+++ b/angular/logging-service/src/styles.css
@@ -11,6 +11,11 @@ h1 {
   padding: 20px;
 }
 
+.column {
+  align-items: center;
+  flex-direction: column;
+}
+
 .box {
   width: 200px;
   height: 100px;
@@ -19,9 +24,18 @@ h1 {
 .book {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 5px;
   width: 200px;
   height: 50px;
   background-color: azure;
+}
+
+.button {
+  margin: 5px;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
 }
